# CoreBackend

./: .gitignore  .test.env  Dockerfile.production  alembic.ini  dev.docker-compose.yaml  entrypoint.sh  pyproject.toml  readme.md  test.docker-compose.yaml
.github/workflows/: docker-build-push.yaml  linters.yaml
alembic/: env.py
alembic/versions/: 2504c51722b5_course.py  3b078e034715_google_calendar_link.py  3cdc89b052bc_favorite_courses.py  68cc9f3338b1_course_run_timetable.py  b1ecf9cd86c0_feedback_and_votes.py  b3632baf5773_profile.py  b85ab4c1beaf_rating_for_feedback.py  d21fb58adff2_init_db.py  e29544b891d8_playlists.py  e967288e19c5_user.py
integration_tests/: conftest.py  test_health_check.py
integration_tests/auth/: test_repositories.py  test_session_service.py
integration_tests/course_run/: test_repostitory.py
integration_tests/courses/: test_course_cache_service.py  test_repostitory.py
integration_tests/feedback/: test_feedback_cache_service.py  test_repostitory.py
integration_tests/timetable/: test_repostitory.py
src/: app.py  config.py  exceptions.py
src/api/: base_pagination.py  base_schemas.py  health_check.py
src/api/admin/: course_router.py  dependencies.py  router.py  schemas.py
src/api/auth/: dependencies.py  router.py  schemas.py
src/api/courses/: dependencies.py  router.py  schemas.py
src/api/favorite_courses/: dependencies.py  router.py  schemas.py
src/api/feedback/: dependencies.py  router.py  schemas.py
src/domain/: base_exceptions.py  base_value_objects.py
src/services/: base_unit_of_work.py
(+131 files in other folders)
